[package]
name = "redis-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
counter = "0.7.0"
fred = "10.1.0"
indicatif = "0.18.0"
tabled = "0.20.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
